fix sticky cell gap bug

--- a/components/table/TableEditCell/style.scss
+++ b/components/table/TableEditCell/style.scss
@@ -1,5 +1,5 @@
 .table-cell.edit-cell {
-  right: 1px;
+  right: 0;
   top: 0;
   position: sticky;
   background-color: inherit;
