--- a/components/table/TableRowContainer/style.scss
+++ b/components/table/TableRowContainer/style.scss
@@ -8,6 +8,7 @@
   background-color: var(--bg-color);
   border: 1px solid var(--border-disabled);
   border-top: 0;
+  position: relative;
 
   @include animate(background-color);
 
